--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@prismicio/slice-simulator-react": "^0.2.2",
     "next": "12.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "18.6.5",
