--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -30,7 +30,11 @@
         }
       }
     },
-    "ProjectCard": {},
+    "ProjectCard": {
+      "default": {
+        "primary": {}
+      }
+    },
     "TechStackCard": {},
     "HomeTopSection": {},
     "HomeTopSectionProjects": {
