--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@prismicio/react": "^2.4.4",
     "@prismicio/slice-simulator-react": "^0.2.2",
     "next": "12.2.4",
+    "nodemailer": "^6.7.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "18.6.5",
+    "@types/nodemailer": "^6.4.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.8",
