--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prismicio/next": "^0.1.3",
     "@prismicio/react": "^2.4.4",
     "@prismicio/slice-simulator-react": "^0.2.2",
+    "framer-motion": "^7.3.5",
     "next": "12.2.4",
     "nodemailer": "^6.7.8",
     "react": "18.2.0",
